--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    buildFeatures {
+        viewBinding = true
+    }
 }
 
 dependencies {
@@ -74,6 +78,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation project(path: ':ads')
+    implementation 'androidx.activity:activity:1.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 //    implementation "com.github.bumptech.glide:volley-integration:4.9.0"
 
@@ -123,4 +128,5 @@ dependencies {
     implementation "androidx.multidex:multidex:2.0.1"
 
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation "com.airbnb.android:lottie:6.6.3"
 }
